--- a/.env copy
+++ b/.env copy
@@ -29,7 +29,7 @@ MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=developmentsoftware.hsj@gmail.com
 MAIL_PASSWORD=deVhSj74$*
-MAIL_ENCRYPTION=tls
+MAIL_ENCRYPTION=TLS
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -77,7 +77,7 @@ MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=developmentsoftware.hsj@gmail.com
 MAIL_PASSWORD=hsj@2328
-MAIL_ENCRYPTION=tls
+MAIL_ENCRYPTION=TLS
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
